# timer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  debug.bat
.github/workflows/: build-deploy.yml  build-ubuntu.yml  build-windows.yml
debug/: timer.sln
src/: main.cpp
